feat(i18n): add faq/ui translations
[v2.1.2]

--- a/config/i18n/cs.json5
+++ b/config/i18n/cs.json5
@@ -187,5 +187,52 @@
   "needed": "potrebne",
   "or": "nebo",
   "panel at the top of the page for known, community-tested combos.": "panel nahore na strance s kombinacemi testovanymi komunitou.",
-  "to focus": "pro fokus"
+  "to focus": "pro fokus",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Pridat do oblibenych",
+  "All Categories": "Vsechny kategorie",
+  "Category:": "Kategorie:",
+  "Clear category filter": "Vymazat filtr kategorie",
+  "Copy base price": "Kopirovat zakladni cenu",
+  "Max": "Max",
+  "Maximum price": "Maximalni cena",
+  "Min": "Min",
+  "Minimum price": "Minimalni cena",
+  "Remove from favorites": "Odebrat z oblibenych",
+  "Reset price range": "Resetovat cenove rozpeti",
+  "to": "az",
+
+  // Help & FAQ page
+  "6h Exclusions": "Vylouceni 6h",
+  "Calculator Guide": "Pruvodce kalkulackou",
+  "Copy link to this section": "Kopirovat odkaz na tuto sekci",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Vse, co potrebujete vedet o ritualech Kultistickeho kruhu, hodnotach predmetu a mechanice kalkulacky.",
+  "General FAQ": "Obecne FAQ",
+  "How can I optimize my sacrifices?": "Jak mohu optimalizovat sve obeti?",
+  "How do I use the calculator?": "Jak pouzivat kalkulacku?",
+  "How do ritual durations work?": "Jak funguji doby trvani ritualu?",
+  "How is 'Base Value' calculated?": "Jak se pocita 'Zakladni hodnota'?",
+  "Incompatible Items": "Nekompatibilni predmety",
+  "Item & Category Issues": "Problemy s predmety a kategoriemi",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Predmety, ktere lze obetovat, ale nikdy nebudou vraceny jako odmeny 6h.",
+  "Link copied!": "Odkaz zkopirovan!",
+  "Note:": "Poznamka:",
+  "Ritual Mechanics": "Mechanika ritualu",
+  "Search 6h exclusions...": "Hledat vylouceni 6h...",
+  "Search incompatible items...": "Hledat nekompatibilni predmety...",
+  "These items are completely incompatible with ritual mechanics.": "Tyto predmety jsou zcela nekompatibilni s mechanikou ritualu.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Tyto predmety lze stale ziskat jako odmeny z 14h ritualu, ale nikdy z 6h ritualu \"Ukol/Ukryt\".",
+  "Tips & Tricks": "Tipy a triky",
+  "Total Excluded from 6h:": "Celkem vylouceno z 6h:",
+  "Total Restricted Items:": "Celkem omezenych predmetu:",
+  "What are 'Hot Sacrifices'?": "Co jsou 'Popularni obeti'?",
+  "What are 'Item Hints'?": "Co jsou 'Napovedy predmetu'?",
+  "What are the value thresholds for a 6h ritual?": "Jake jsou hodnotove prahy pro 6h ritual?",
+  "What is the Recipes page?": "Co je stranka Receptu?",
+  "Why are some items excluded from 6h rewards?": "Proc jsou nektere predmety vylouceny z odmen 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Proc jsou nektere predmety skryty ve 'Vyloucene kategorie'?",
+  "Why are weapons hidden by default?": "Proc jsou zbrane ve vychozim nastaveni skryty?",
+  "Why can't I use certain items in the ritual?": "Proc nemohu pouzit urcite predmety v ritualu?",
+  "Why do some weapons have such high Base Values?": "Proc maji nektere zbrane tak vysoke zakladni hodnoty?"
 }
