--- a/config/i18n/de.json5
+++ b/config/i18n/de.json5
@@ -187,5 +187,52 @@
   "needed": "benoetigt",
   "or": "oder",
   "panel at the top of the page for known, community-tested combos.": "Panel oben auf der Seite fuer bekannte, von der Community getestete Kombinationen.",
-  "to focus": "zum Fokussieren"
+  "to focus": "zum Fokussieren",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Zu Favoriten hinzufuegen",
+  "All Categories": "Alle Kategorien",
+  "Category:": "Kategorie:",
+  "Clear category filter": "Kategoriefilter loeschen",
+  "Copy base price": "Basispreis kopieren",
+  "Max": "Max",
+  "Maximum price": "Hoechstpreis",
+  "Min": "Min",
+  "Minimum price": "Mindestpreis",
+  "Remove from favorites": "Aus Favoriten entfernen",
+  "Reset price range": "Preisspanne zuruecksetzen",
+  "to": "bis",
+
+  // Help & FAQ page
+  "6h Exclusions": "6-Std.-Ausschluesse",
+  "Calculator Guide": "Rechner-Anleitung",
+  "Copy link to this section": "Link zu diesem Abschnitt kopieren",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Alles, was du ueber die Kultistenkreis-Rituale, Objektwerte und Rechner-Mechaniken wissen musst.",
+  "General FAQ": "Allgemeine FAQ",
+  "How can I optimize my sacrifices?": "Wie kann ich meine Opfer optimieren?",
+  "How do I use the calculator?": "Wie benutze ich den Rechner?",
+  "How do ritual durations work?": "Wie funktionieren Ritualdauern?",
+  "How is 'Base Value' calculated?": "Wie wird der 'Basiswert' berechnet?",
+  "Incompatible Items": "Inkompatible Objekte",
+  "Item & Category Issues": "Objekt- und Kategorieprobleme",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Objekte, die geopfert, aber nie als 6-Std.-Belohnungen zurueckgegeben werden koennen.",
+  "Link copied!": "Link kopiert!",
+  "Note:": "Hinweis:",
+  "Ritual Mechanics": "Ritual-Mechaniken",
+  "Search 6h exclusions...": "6-Std.-Ausschluesse suchen...",
+  "Search incompatible items...": "Inkompatible Objekte suchen...",
+  "These items are completely incompatible with ritual mechanics.": "Diese Objekte sind voellig inkompatibel mit den Ritual-Mechaniken.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Diese Objekte koennen noch als Belohnungen aus 14-Std.-Ritualen erhalten werden, aber nie aus dem 6-Std.-\"Quest/Versteck\"-Ritual.",
+  "Tips & Tricks": "Tipps und Tricks",
+  "Total Excluded from 6h:": "Gesamt ausgeschlossen von 6 Std.:",
+  "Total Restricted Items:": "Gesamt eingeschraenkte Objekte:",
+  "What are 'Hot Sacrifices'?": "Was sind 'Beliebte Opfer'?",
+  "What are 'Item Hints'?": "Was sind 'Objekthinweise'?",
+  "What are the value thresholds for a 6h ritual?": "Was sind die Wertschwellen fuer ein 6-Std.-Ritual?",
+  "What is the Recipes page?": "Was ist die Rezepte-Seite?",
+  "Why are some items excluded from 6h rewards?": "Warum sind einige Objekte von 6-Std.-Belohnungen ausgeschlossen?",
+  "Why are some items hidden in 'Excluded Categories'?": "Warum sind einige Objekte in 'Ausgeschlossene Kategorien' versteckt?",
+  "Why are weapons hidden by default?": "Warum sind Waffen standardmaessig versteckt?",
+  "Why can't I use certain items in the ritual?": "Warum kann ich bestimmte Objekte nicht im Ritual verwenden?",
+  "Why do some weapons have such high Base Values?": "Warum haben einige Waffen so hohe Basiswerte?"
 }
