--- a/config/i18n/es.json5
+++ b/config/i18n/es.json5
@@ -187,5 +187,52 @@
   "needed": "necesario",
   "or": "o",
   "panel at the top of the page for known, community-tested combos.": "panel en la parte superior de la pagina para combinaciones conocidas y probadas por la comunidad.",
-  "to focus": "para enfocar"
+  "to focus": "para enfocar",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Agregar a favoritos",
+  "All Categories": "Todas las categorias",
+  "Category:": "Categoria:",
+  "Clear category filter": "Borrar filtro de categoria",
+  "Copy base price": "Copiar precio base",
+  "Max": "Max",
+  "Maximum price": "Precio maximo",
+  "Min": "Min",
+  "Minimum price": "Precio minimo",
+  "Remove from favorites": "Quitar de favoritos",
+  "Reset price range": "Restablecer rango de precios",
+  "to": "a",
+
+  // Help & FAQ page
+  "6h Exclusions": "Exclusiones de 6h",
+  "Calculator Guide": "Guia del calculador",
+  "Copy link to this section": "Copiar enlace a esta seccion",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Todo lo que necesitas saber sobre los rituales del Circulo Cultista, valores de objetos y mecanicas del calculador.",
+  "General FAQ": "Preguntas frecuentes",
+  "How can I optimize my sacrifices?": "Como puedo optimizar mis sacrificios?",
+  "How do I use the calculator?": "Como uso el calculador?",
+  "How do ritual durations work?": "Como funcionan las duraciones de los rituales?",
+  "How is 'Base Value' calculated?": "Como se calcula el 'Valor Base'?",
+  "Incompatible Items": "Objetos incompatibles",
+  "Item & Category Issues": "Problemas de objetos y categorias",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Objetos que pueden ser sacrificados pero nunca devueltos como recompensas de 6h.",
+  "Link copied!": "Enlace copiado!",
+  "Note:": "Nota:",
+  "Ritual Mechanics": "Mecanicas del ritual",
+  "Search 6h exclusions...": "Buscar exclusiones de 6h...",
+  "Search incompatible items...": "Buscar objetos incompatibles...",
+  "These items are completely incompatible with ritual mechanics.": "Estos objetos son completamente incompatibles con las mecanicas del ritual.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Estos objetos aun pueden recibirse como recompensas de rituales de 14h, pero nunca del ritual de 6h \"Mision/Refugio\".",
+  "Tips & Tricks": "Consejos y trucos",
+  "Total Excluded from 6h:": "Total excluidos de 6h:",
+  "Total Restricted Items:": "Total de objetos restringidos:",
+  "What are 'Hot Sacrifices'?": "Que son los 'Sacrificios populares'?",
+  "What are 'Item Hints'?": "Que son las 'Sugerencias de objetos'?",
+  "What are the value thresholds for a 6h ritual?": "Cuales son los umbrales de valor para un ritual de 6h?",
+  "What is the Recipes page?": "Que es la pagina de Recetas?",
+  "Why are some items excluded from 6h rewards?": "Por que algunos objetos estan excluidos de las recompensas de 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Por que algunos objetos estan ocultos en 'Categorias excluidas'?",
+  "Why are weapons hidden by default?": "Por que las armas estan ocultas por defecto?",
+  "Why can't I use certain items in the ritual?": "Por que no puedo usar ciertos objetos en el ritual?",
+  "Why do some weapons have such high Base Values?": "Por que algunas armas tienen valores base tan altos?"
 }
