--- a/config/i18n/fr.json5
+++ b/config/i18n/fr.json5
@@ -187,5 +187,52 @@
   "needed": "requis",
   "or": "ou",
   "panel at the top of the page for known, community-tested combos.": "panneau en haut de la page pour des combinaisons connues et testees par la communaute.",
-  "to focus": "pour focaliser"
+  "to focus": "pour focaliser",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Ajouter aux favoris",
+  "All Categories": "Toutes les categories",
+  "Category:": "Categorie :",
+  "Clear category filter": "Effacer le filtre de categorie",
+  "Copy base price": "Copier le prix de base",
+  "Max": "Max",
+  "Maximum price": "Prix maximum",
+  "Min": "Min",
+  "Minimum price": "Prix minimum",
+  "Remove from favorites": "Retirer des favoris",
+  "Reset price range": "Reinitialiser la fourchette de prix",
+  "to": "a",
+
+  // Help & FAQ page
+  "6h Exclusions": "Exclusions 6 h",
+  "Calculator Guide": "Guide du calculateur",
+  "Copy link to this section": "Copier le lien vers cette section",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Tout ce que vous devez savoir sur les rituels du Cultist Circle, les valeurs des objets et les mecaniques du calculateur.",
+  "General FAQ": "FAQ generale",
+  "How can I optimize my sacrifices?": "Comment optimiser mes sacrifices ?",
+  "How do I use the calculator?": "Comment utiliser le calculateur ?",
+  "How do ritual durations work?": "Comment fonctionnent les durees de rituel ?",
+  "How is 'Base Value' calculated?": "Comment la 'Valeur de base' est-elle calculee ?",
+  "Incompatible Items": "Objets incompatibles",
+  "Item & Category Issues": "Problemes d'objets et de categories",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Objets pouvant etre sacrifies mais jamais retournes en recompenses 6 h.",
+  "Link copied!": "Lien copie !",
+  "Note:": "Note :",
+  "Ritual Mechanics": "Mecaniques de rituel",
+  "Search 6h exclusions...": "Rechercher les exclusions 6 h...",
+  "Search incompatible items...": "Rechercher des objets incompatibles...",
+  "These items are completely incompatible with ritual mechanics.": "Ces objets sont totalement incompatibles avec les mecaniques de rituel.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Ces objets peuvent encore etre recus en recompense des rituels 14 h, mais jamais du rituel 6 h \"Quete/Planque\".",
+  "Tips & Tricks": "Trucs et astuces",
+  "Total Excluded from 6h:": "Total exclus des 6 h :",
+  "Total Restricted Items:": "Total des objets restreints :",
+  "What are 'Hot Sacrifices'?": "Que sont les 'Sacrifices populaires' ?",
+  "What are 'Item Hints'?": "Que sont les 'Suggestions d'objets' ?",
+  "What are the value thresholds for a 6h ritual?": "Quels sont les seuils de valeur pour un rituel 6 h ?",
+  "What is the Recipes page?": "Qu'est-ce que la page Recettes ?",
+  "Why are some items excluded from 6h rewards?": "Pourquoi certains objets sont-ils exclus des recompenses 6 h ?",
+  "Why are some items hidden in 'Excluded Categories'?": "Pourquoi certains objets sont-ils caches dans 'Categories exclues' ?",
+  "Why are weapons hidden by default?": "Pourquoi les armes sont-elles cachees par defaut ?",
+  "Why can't I use certain items in the ritual?": "Pourquoi ne puis-je pas utiliser certains objets dans le rituel ?",
+  "Why do some weapons have such high Base Values?": "Pourquoi certaines armes ont-elles des valeurs de base si elevees ?"
 }
