--- a/config/i18n/hu.json5
+++ b/config/i18n/hu.json5
@@ -187,5 +187,52 @@
   "needed": "szukseges",
   "or": "vagy",
   "panel at the top of the page for known, community-tested combos.": "panel a lap tetejen a kozosseg altal tesztelt kombinaciokhoz.",
-  "to focus": "a fokuszhoz"
+  "to focus": "a fokuszhoz",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Hozzaadas a kedvencekhez",
+  "All Categories": "Minden kategoria",
+  "Category:": "Kategoria:",
+  "Clear category filter": "Kategoriaszuro torlese",
+  "Copy base price": "Alapar masolasa",
+  "Max": "Max",
+  "Maximum price": "Maximalis ar",
+  "Min": "Min",
+  "Minimum price": "Minimalis ar",
+  "Remove from favorites": "Eltavolitas a kedvencekbol",
+  "Reset price range": "Artartomany visszaallitasa",
+  "to": "-ig",
+
+  // Help & FAQ page
+  "6h Exclusions": "6 oras kizarasok",
+  "Calculator Guide": "Kalkulator utmutato",
+  "Copy link to this section": "Link masolasa ehhez a szekciohoz",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Minden, amit tudnod kell a Kultista Kor ritualokrol, targyertekekrol es a kalkulator mukodeserol.",
+  "General FAQ": "Altalanos GYIK",
+  "How can I optimize my sacrifices?": "Hogyan optimalizalhatom az aldozataimat?",
+  "How do I use the calculator?": "Hogyan hasznaljam a kalkulatort?",
+  "How do ritual durations work?": "Hogyan mukodnek a ritual idotartamok?",
+  "How is 'Base Value' calculated?": "Hogyan szamitjak ki az 'Alaperteket'?",
+  "Incompatible Items": "Nem kompatibilis targyak",
+  "Item & Category Issues": "Targy es kategoria problemak",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Targyak, amelyek felaldozhatok, de soha nem ternek vissza 6 oras jutalomkent.",
+  "Link copied!": "Link masolva!",
+  "Note:": "Megjegyzes:",
+  "Ritual Mechanics": "Ritual mechanika",
+  "Search 6h exclusions...": "6 oras kizarasok keresese...",
+  "Search incompatible items...": "Nem kompatibilis targyak keresese...",
+  "These items are completely incompatible with ritual mechanics.": "Ezek a targyak teljesen nem kompatibilisek a ritual mechanikakkal.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Ezek a targyak meg mindig megkaphatok jutalmakkent a 14 oras ritualokbol, de soha a 6 oras \"Kuldetés/Rejtekhely\" ritualbol.",
+  "Tips & Tricks": "Tippek es trukkok",
+  "Total Excluded from 6h:": "Osszes kizart a 6 orasbol:",
+  "Total Restricted Items:": "Osszes korlatozott targy:",
+  "What are 'Hot Sacrifices'?": "Mik azok a 'Nepszeru aldozatok'?",
+  "What are 'Item Hints'?": "Mik azok a 'Targy tippek'?",
+  "What are the value thresholds for a 6h ritual?": "Mik az ertekhatarak a 6 oras ritualhoz?",
+  "What is the Recipes page?": "Mi a Receptek oldal?",
+  "Why are some items excluded from 6h rewards?": "Miert vannak egyes targyak kizarva a 6 oras jutalmakbol?",
+  "Why are some items hidden in 'Excluded Categories'?": "Miert vannak egyes targyak elrejtve a 'Kizart kategoriak'-ban?",
+  "Why are weapons hidden by default?": "Miert vannak a fegyverek alapertelmezetten elrejtve?",
+  "Why can't I use certain items in the ritual?": "Miert nem hasznalhatok bizonyos targyakat a ritualban?",
+  "Why do some weapons have such high Base Values?": "Miert van egyes fegyvereknek olyan magas alaperteke?"
 }
