--- a/config/i18n/it.json5
+++ b/config/i18n/it.json5
@@ -187,5 +187,52 @@
   "needed": "necessario",
   "or": "o",
   "panel at the top of the page for known, community-tested combos.": "pannello in alto con combinazioni note e testate dalla comunita.",
-  "to focus": "per mettere a fuoco"
+  "to focus": "per mettere a fuoco",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Aggiungi ai preferiti",
+  "All Categories": "Tutte le categorie",
+  "Category:": "Categoria:",
+  "Clear category filter": "Cancella filtro categoria",
+  "Copy base price": "Copia prezzo base",
+  "Max": "Max",
+  "Maximum price": "Prezzo massimo",
+  "Min": "Min",
+  "Minimum price": "Prezzo minimo",
+  "Remove from favorites": "Rimuovi dai preferiti",
+  "Reset price range": "Reimposta fascia di prezzo",
+  "to": "a",
+
+  // Help & FAQ page
+  "6h Exclusions": "Esclusioni 6h",
+  "Calculator Guide": "Guida al calcolatore",
+  "Copy link to this section": "Copia link a questa sezione",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Tutto cio che devi sapere sui rituali del Cerchio dei Cultisti, valori degli oggetti e meccaniche del calcolatore.",
+  "General FAQ": "FAQ generali",
+  "How can I optimize my sacrifices?": "Come posso ottimizzare i miei sacrifici?",
+  "How do I use the calculator?": "Come uso il calcolatore?",
+  "How do ritual durations work?": "Come funzionano le durate dei rituali?",
+  "How is 'Base Value' calculated?": "Come viene calcolato il 'Valore Base'?",
+  "Incompatible Items": "Oggetti incompatibili",
+  "Item & Category Issues": "Problemi di oggetti e categorie",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Oggetti che possono essere sacrificati ma mai restituiti come ricompense di 6h.",
+  "Link copied!": "Link copiato!",
+  "Note:": "Nota:",
+  "Ritual Mechanics": "Meccaniche del rituale",
+  "Search 6h exclusions...": "Cerca esclusioni 6h...",
+  "Search incompatible items...": "Cerca oggetti incompatibili...",
+  "These items are completely incompatible with ritual mechanics.": "Questi oggetti sono completamente incompatibili con le meccaniche del rituale.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Questi oggetti possono ancora essere ricevuti come ricompense dai rituali di 14h, ma mai dal rituale di 6h \"Missione/Nascondiglio\".",
+  "Tips & Tricks": "Suggerimenti e trucchi",
+  "Total Excluded from 6h:": "Totale esclusi da 6h:",
+  "Total Restricted Items:": "Totale oggetti limitati:",
+  "What are 'Hot Sacrifices'?": "Cosa sono i 'Sacrifici popolari'?",
+  "What are 'Item Hints'?": "Cosa sono i 'Suggerimenti oggetti'?",
+  "What are the value thresholds for a 6h ritual?": "Quali sono le soglie di valore per un rituale di 6h?",
+  "What is the Recipes page?": "Cos'e la pagina Ricette?",
+  "Why are some items excluded from 6h rewards?": "Perche alcuni oggetti sono esclusi dalle ricompense di 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Perche alcuni oggetti sono nascosti in 'Categorie escluse'?",
+  "Why are weapons hidden by default?": "Perche le armi sono nascoste per impostazione predefinita?",
+  "Why can't I use certain items in the ritual?": "Perche non posso usare certi oggetti nel rituale?",
+  "Why do some weapons have such high Base Values?": "Perche alcune armi hanno valori base cosi alti?"
 }
