--- a/config/i18n/ja.json5
+++ b/config/i18n/ja.json5
@@ -187,5 +187,52 @@
   "needed": "必要",
   "or": "または",
   "panel at the top of the page for known, community-tested combos.": "ページ上部のパネルで、コミュニティ検証済みの組み合わせを確認できます。",
-  "to focus": "フォーカスする"
+  "to focus": "フォーカスする",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "お気に入りに追加",
+  "All Categories": "すべてのカテゴリ",
+  "Category:": "カテゴリ：",
+  "Clear category filter": "カテゴリフィルターをクリア",
+  "Copy base price": "基本価格をコピー",
+  "Max": "最大",
+  "Maximum price": "最高価格",
+  "Min": "最小",
+  "Minimum price": "最低価格",
+  "Remove from favorites": "お気に入りから削除",
+  "Reset price range": "価格範囲をリセット",
+  "to": "から",
+
+  // Help & FAQ page
+  "6h Exclusions": "6時間除外",
+  "Calculator Guide": "計算機ガイド",
+  "Copy link to this section": "このセクションへのリンクをコピー",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "カルティストサークルの儀式、アイテム価値、計算機の仕組みについて知っておくべきすべてのこと。",
+  "General FAQ": "一般的なFAQ",
+  "How can I optimize my sacrifices?": "供物を最適化するには？",
+  "How do I use the calculator?": "計算機の使い方は？",
+  "How do ritual durations work?": "儀式の期間はどのように機能しますか？",
+  "How is 'Base Value' calculated?": "'基本価値'はどのように計算されますか？",
+  "Incompatible Items": "互換性のないアイテム",
+  "Item & Category Issues": "アイテムとカテゴリの問題",
+  "Items that can be sacrificed but never returned as 6h rewards.": "供物にできるが、6時間報酬として返却されることはないアイテム。",
+  "Link copied!": "リンクをコピーしました！",
+  "Note:": "注意：",
+  "Ritual Mechanics": "儀式の仕組み",
+  "Search 6h exclusions...": "6時間除外を検索...",
+  "Search incompatible items...": "互換性のないアイテムを検索...",
+  "These items are completely incompatible with ritual mechanics.": "これらのアイテムは儀式の仕組みと完全に互換性がありません。",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "これらのアイテムは14時間儀式の報酬として受け取れますが、6時間「クエスト/ハイドアウト」儀式からは決して受け取れません。",
+  "Tips & Tricks": "ヒントとコツ",
+  "Total Excluded from 6h:": "6時間から除外された合計：",
+  "Total Restricted Items:": "制限されたアイテムの合計：",
+  "What are 'Hot Sacrifices'?": "'人気の供物'とは？",
+  "What are 'Item Hints'?": "'アイテムヒント'とは？",
+  "What are the value thresholds for a 6h ritual?": "6時間儀式の価値しきい値は？",
+  "What is the Recipes page?": "レシピページとは？",
+  "Why are some items excluded from 6h rewards?": "なぜ一部のアイテムが6時間報酬から除外されているのですか？",
+  "Why are some items hidden in 'Excluded Categories'?": "なぜ一部のアイテムが'除外カテゴリ'に隠されているのですか？",
+  "Why are weapons hidden by default?": "なぜ武器はデフォルトで非表示なのですか？",
+  "Why can't I use certain items in the ritual?": "なぜ特定のアイテムを儀式で使用できないのですか？",
+  "Why do some weapons have such high Base Values?": "なぜ一部の武器は基本価値が非常に高いのですか？"
 }
