--- a/config/i18n/ko.json5
+++ b/config/i18n/ko.json5
@@ -187,5 +187,52 @@
   "needed": "필요",
   "or": "또는",
   "panel at the top of the page for known, community-tested combos.": "페이지 상단 패널에서 커뮤니티 검증 조합을 확인할 수 있습니다.",
-  "to focus": "포커스"
+  "to focus": "포커스",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "즐겨찾기에 추가",
+  "All Categories": "모든 카테고리",
+  "Category:": "카테고리:",
+  "Clear category filter": "카테고리 필터 지우기",
+  "Copy base price": "기본 가격 복사",
+  "Max": "최대",
+  "Maximum price": "최고 가격",
+  "Min": "최소",
+  "Minimum price": "최저 가격",
+  "Remove from favorites": "즐겨찾기에서 제거",
+  "Reset price range": "가격 범위 초기화",
+  "to": "~",
+
+  // Help & FAQ page
+  "6h Exclusions": "6시간 제외 항목",
+  "Calculator Guide": "계산기 가이드",
+  "Copy link to this section": "이 섹션 링크 복사",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "컬티스트 서클 의식, 아이템 가치 및 계산기 메커니즘에 대해 알아야 할 모든 것.",
+  "General FAQ": "일반 FAQ",
+  "How can I optimize my sacrifices?": "제물을 어떻게 최적화할 수 있나요?",
+  "How do I use the calculator?": "계산기를 어떻게 사용하나요?",
+  "How do ritual durations work?": "의식 지속 시간은 어떻게 작동하나요?",
+  "How is 'Base Value' calculated?": "'기본 가치'는 어떻게 계산되나요?",
+  "Incompatible Items": "호환되지 않는 아이템",
+  "Item & Category Issues": "아이템 및 카테고리 문제",
+  "Items that can be sacrificed but never returned as 6h rewards.": "제물로 바칠 수 있지만 6시간 보상으로 반환되지 않는 아이템.",
+  "Link copied!": "링크 복사됨!",
+  "Note:": "참고:",
+  "Ritual Mechanics": "의식 메커니즘",
+  "Search 6h exclusions...": "6시간 제외 항목 검색...",
+  "Search incompatible items...": "호환되지 않는 아이템 검색...",
+  "These items are completely incompatible with ritual mechanics.": "이 아이템들은 의식 메커니즘과 완전히 호환되지 않습니다.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "이 아이템들은 14시간 의식 보상으로 받을 수 있지만, 6시간 \"퀘스트/은신처\" 의식에서는 받을 수 없습니다.",
+  "Tips & Tricks": "팁과 요령",
+  "Total Excluded from 6h:": "6시간에서 제외된 총계:",
+  "Total Restricted Items:": "제한된 아이템 총계:",
+  "What are 'Hot Sacrifices'?": "'인기 제물'이란?",
+  "What are 'Item Hints'?": "'아이템 힌트'란?",
+  "What are the value thresholds for a 6h ritual?": "6시간 의식의 가치 임계값은?",
+  "What is the Recipes page?": "레시피 페이지란?",
+  "Why are some items excluded from 6h rewards?": "일부 아이템이 6시간 보상에서 제외되는 이유는?",
+  "Why are some items hidden in 'Excluded Categories'?": "일부 아이템이 '제외된 카테고리'에 숨겨진 이유는?",
+  "Why are weapons hidden by default?": "무기가 기본적으로 숨겨진 이유는?",
+  "Why can't I use certain items in the ritual?": "특정 아이템을 의식에서 사용할 수 없는 이유는?",
+  "Why do some weapons have such high Base Values?": "일부 무기의 기본 가치가 높은 이유는?"
 }
