--- a/config/i18n/pl.json5
+++ b/config/i18n/pl.json5
@@ -187,5 +187,52 @@
   "needed": "potrzebne",
   "or": "lub",
   "panel at the top of the page for known, community-tested combos.": "panel na górze strony z kombinacjami sprawdzonymi przez społeczność.",
-  "to focus": "aby skupić"
+  "to focus": "aby skupić",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Dodaj do ulubionych",
+  "All Categories": "Wszystkie kategorie",
+  "Category:": "Kategoria:",
+  "Clear category filter": "Wyczyść filtr kategorii",
+  "Copy base price": "Kopiuj cenę bazową",
+  "Max": "Maks",
+  "Maximum price": "Cena maksymalna",
+  "Min": "Min",
+  "Minimum price": "Cena minimalna",
+  "Remove from favorites": "Usuń z ulubionych",
+  "Reset price range": "Resetuj zakres cen",
+  "to": "do",
+
+  // Help & FAQ page
+  "6h Exclusions": "Wykluczenia 6h",
+  "Calculator Guide": "Przewodnik kalkulatora",
+  "Copy link to this section": "Kopiuj link do tej sekcji",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Wszystko, co musisz wiedzieć o rytuałach Kultystów, wartościach przedmiotów i mechanice kalkulatora.",
+  "General FAQ": "Ogólne FAQ",
+  "How can I optimize my sacrifices?": "Jak zoptymalizować moje ofiary?",
+  "How do I use the calculator?": "Jak używać kalkulatora?",
+  "How do ritual durations work?": "Jak działają czasy trwania rytuałów?",
+  "How is 'Base Value' calculated?": "Jak obliczana jest 'Wartość bazowa'?",
+  "Incompatible Items": "Niekompatybilne przedmioty",
+  "Item & Category Issues": "Problemy z przedmiotami i kategoriami",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Przedmioty, które można poświęcić, ale nigdy nie zostaną zwrócone jako nagrody 6h.",
+  "Link copied!": "Link skopiowany!",
+  "Note:": "Uwaga:",
+  "Ritual Mechanics": "Mechanika rytuałów",
+  "Search 6h exclusions...": "Szukaj wykluczeń 6h...",
+  "Search incompatible items...": "Szukaj niekompatybilnych przedmiotów...",
+  "These items are completely incompatible with ritual mechanics.": "Te przedmioty są całkowicie niekompatybilne z mechaniką rytuałów.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Te przedmioty można otrzymać jako nagrody z rytuałów 14h, ale nigdy z rytuału 6h \"Zadanie/Kryjówka\".",
+  "Tips & Tricks": "Porady i sztuczki",
+  "Total Excluded from 6h:": "Łącznie wykluczone z 6h:",
+  "Total Restricted Items:": "Łączna liczba ograniczonych przedmiotów:",
+  "What are 'Hot Sacrifices'?": "Czym są 'Popularne ofiary'?",
+  "What are 'Item Hints'?": "Czym są 'Podpowiedzi przedmiotów'?",
+  "What are the value thresholds for a 6h ritual?": "Jakie są progi wartości dla rytuału 6h?",
+  "What is the Recipes page?": "Czym jest strona Przepisów?",
+  "Why are some items excluded from 6h rewards?": "Dlaczego niektóre przedmioty są wykluczone z nagród 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Dlaczego niektóre przedmioty są ukryte w 'Wykluczone kategorie'?",
+  "Why are weapons hidden by default?": "Dlaczego broń jest domyślnie ukryta?",
+  "Why can't I use certain items in the ritual?": "Dlaczego nie mogę użyć niektórych przedmiotów w rytuale?",
+  "Why do some weapons have such high Base Values?": "Dlaczego niektóre bronie mają tak wysokie wartości bazowe?"
 }
