--- a/config/i18n/pt.json5
+++ b/config/i18n/pt.json5
@@ -187,5 +187,52 @@
   "needed": "necessario",
   "or": "ou",
   "panel at the top of the page for known, community-tested combos.": "painel no topo da pagina para combinacoes conhecidas e testadas pela comunidade.",
-  "to focus": "para focar"
+  "to focus": "para focar",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Adicionar aos favoritos",
+  "All Categories": "Todas as categorias",
+  "Category:": "Categoria:",
+  "Clear category filter": "Limpar filtro de categoria",
+  "Copy base price": "Copiar preco base",
+  "Max": "Max",
+  "Maximum price": "Preco maximo",
+  "Min": "Min",
+  "Minimum price": "Preco minimo",
+  "Remove from favorites": "Remover dos favoritos",
+  "Reset price range": "Redefinir faixa de preco",
+  "to": "ate",
+
+  // Help & FAQ page
+  "6h Exclusions": "Exclusoes de 6h",
+  "Calculator Guide": "Guia do calculador",
+  "Copy link to this section": "Copiar link para esta secao",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Tudo o que voce precisa saber sobre os rituais do Circulo Cultista, valores de itens e mecanicas do calculador.",
+  "General FAQ": "Perguntas frequentes",
+  "How can I optimize my sacrifices?": "Como posso otimizar meus sacrificios?",
+  "How do I use the calculator?": "Como uso o calculador?",
+  "How do ritual durations work?": "Como funcionam as duracoes dos rituais?",
+  "How is 'Base Value' calculated?": "Como o 'Valor Base' e calculado?",
+  "Incompatible Items": "Itens incompativeis",
+  "Item & Category Issues": "Problemas de itens e categorias",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Itens que podem ser sacrificados mas nunca retornados como recompensas de 6h.",
+  "Link copied!": "Link copiado!",
+  "Note:": "Nota:",
+  "Ritual Mechanics": "Mecanicas do ritual",
+  "Search 6h exclusions...": "Pesquisar exclusoes de 6h...",
+  "Search incompatible items...": "Pesquisar itens incompativeis...",
+  "These items are completely incompatible with ritual mechanics.": "Estes itens sao completamente incompativeis com as mecanicas do ritual.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Estes itens ainda podem ser recebidos como recompensas de rituais de 14h, mas nunca do ritual de 6h \"Missao/Esconderijo\".",
+  "Tips & Tricks": "Dicas e truques",
+  "Total Excluded from 6h:": "Total excluido de 6h:",
+  "Total Restricted Items:": "Total de itens restritos:",
+  "What are 'Hot Sacrifices'?": "O que sao 'Sacrificios populares'?",
+  "What are 'Item Hints'?": "O que sao 'Dicas de itens'?",
+  "What are the value thresholds for a 6h ritual?": "Quais sao os limiares de valor para um ritual de 6h?",
+  "What is the Recipes page?": "O que e a pagina de Receitas?",
+  "Why are some items excluded from 6h rewards?": "Por que alguns itens estao excluidos das recompensas de 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Por que alguns itens estao ocultos em 'Categorias excluidas'?",
+  "Why are weapons hidden by default?": "Por que as armas estao ocultas por padrao?",
+  "Why can't I use certain items in the ritual?": "Por que nao posso usar certos itens no ritual?",
+  "Why do some weapons have such high Base Values?": "Por que algumas armas tem valores base tao altos?"
 }
