--- a/config/i18n/ro.json5
+++ b/config/i18n/ro.json5
@@ -187,5 +187,52 @@
   "needed": "necesar",
   "or": "sau",
   "panel at the top of the page for known, community-tested combos.": "panou in partea de sus cu combinatii testate de comunitate.",
-  "to focus": "pentru focus"
+  "to focus": "pentru focus",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Adauga la favorite",
+  "All Categories": "Toate categoriile",
+  "Category:": "Categorie:",
+  "Clear category filter": "Sterge filtrul de categorie",
+  "Copy base price": "Copiaza pretul de baza",
+  "Max": "Max",
+  "Maximum price": "Pret maxim",
+  "Min": "Min",
+  "Minimum price": "Pret minim",
+  "Remove from favorites": "Sterge din favorite",
+  "Reset price range": "Reseteaza intervalul de pret",
+  "to": "pana la",
+
+  // Help & FAQ page
+  "6h Exclusions": "Excluderi 6h",
+  "Calculator Guide": "Ghid calculator",
+  "Copy link to this section": "Copiaza linkul catre aceasta sectiune",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Tot ce trebuie sa stii despre ritualurile Cercului Cultist, valorile obiectelor si mecanica calculatorului.",
+  "General FAQ": "FAQ general",
+  "How can I optimize my sacrifices?": "Cum imi pot optimiza sacrificiile?",
+  "How do I use the calculator?": "Cum folosesc calculatorul?",
+  "How do ritual durations work?": "Cum functioneaza duratele ritualurilor?",
+  "How is 'Base Value' calculated?": "Cum se calculeaza 'Valoarea de baza'?",
+  "Incompatible Items": "Obiecte incompatibile",
+  "Item & Category Issues": "Probleme cu obiecte si categorii",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Obiecte care pot fi sacrificate dar nu vor fi niciodata returnate ca recompense de 6h.",
+  "Link copied!": "Link copiat!",
+  "Note:": "Nota:",
+  "Ritual Mechanics": "Mecanica ritualurilor",
+  "Search 6h exclusions...": "Cauta excluderi 6h...",
+  "Search incompatible items...": "Cauta obiecte incompatibile...",
+  "These items are completely incompatible with ritual mechanics.": "Aceste obiecte sunt complet incompatibile cu mecanica ritualurilor.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Aceste obiecte pot fi primite ca recompense din ritualuri de 14h, dar niciodata din ritualul de 6h \"Misiune/Adapost\".",
+  "Tips & Tricks": "Sfaturi si trucuri",
+  "Total Excluded from 6h:": "Total excluse din 6h:",
+  "Total Restricted Items:": "Total obiecte restrictionate:",
+  "What are 'Hot Sacrifices'?": "Ce sunt 'Sacrificiile populare'?",
+  "What are 'Item Hints'?": "Ce sunt 'Sugestiile de obiecte'?",
+  "What are the value thresholds for a 6h ritual?": "Care sunt pragurile de valoare pentru un ritual de 6h?",
+  "What is the Recipes page?": "Ce este pagina de Retete?",
+  "Why are some items excluded from 6h rewards?": "De ce sunt unele obiecte excluse din recompensele de 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "De ce sunt unele obiecte ascunse in 'Categorii excluse'?",
+  "Why are weapons hidden by default?": "De ce sunt armele ascunse implicit?",
+  "Why can't I use certain items in the ritual?": "De ce nu pot folosi anumite obiecte in ritual?",
+  "Why do some weapons have such high Base Values?": "De ce au unele arme valori de baza atat de mari?"
 }
