--- a/config/i18n/ru.json5
+++ b/config/i18n/ru.json5
@@ -187,5 +187,52 @@
   "needed": "нужно",
   "or": "или",
   "panel at the top of the page for known, community-tested combos.": "панель вверху страницы с известными и протестированными сообществом комбинациями.",
-  "to focus": "для фокуса"
+  "to focus": "для фокуса",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Добавить в избранное",
+  "All Categories": "Все категории",
+  "Category:": "Категория:",
+  "Clear category filter": "Очистить фильтр категории",
+  "Copy base price": "Копировать базовую цену",
+  "Max": "Макс",
+  "Maximum price": "Максимальная цена",
+  "Min": "Мин",
+  "Minimum price": "Минимальная цена",
+  "Remove from favorites": "Удалить из избранного",
+  "Reset price range": "Сбросить диапазон цен",
+  "to": "до",
+
+  // Help & FAQ page
+  "6h Exclusions": "Исключения 6ч",
+  "Calculator Guide": "Руководство по калькулятору",
+  "Copy link to this section": "Копировать ссылку на этот раздел",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Всё, что нужно знать о ритуалах Культистского Круга, ценности предметов и механике калькулятора.",
+  "General FAQ": "Общие вопросы",
+  "How can I optimize my sacrifices?": "Как оптимизировать жертвоприношения?",
+  "How do I use the calculator?": "Как использовать калькулятор?",
+  "How do ritual durations work?": "Как работает длительность ритуалов?",
+  "How is 'Base Value' calculated?": "Как рассчитывается 'Базовая ценность'?",
+  "Incompatible Items": "Несовместимые предметы",
+  "Item & Category Issues": "Проблемы с предметами и категориями",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Предметы, которые можно пожертвовать, но нельзя получить как награду 6ч.",
+  "Link copied!": "Ссылка скопирована!",
+  "Note:": "Примечание:",
+  "Ritual Mechanics": "Механика ритуалов",
+  "Search 6h exclusions...": "Поиск исключений 6ч...",
+  "Search incompatible items...": "Поиск несовместимых предметов...",
+  "These items are completely incompatible with ritual mechanics.": "Эти предметы полностью несовместимы с механикой ритуалов.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Эти предметы можно получить как награду из 14ч ритуалов, но никогда из 6ч ритуала \"Задание/Убежище\".",
+  "Tips & Tricks": "Советы и хитрости",
+  "Total Excluded from 6h:": "Всего исключено из 6ч:",
+  "Total Restricted Items:": "Всего ограниченных предметов:",
+  "What are 'Hot Sacrifices'?": "Что такое 'Популярные жертвы'?",
+  "What are 'Item Hints'?": "Что такое 'Подсказки по предметам'?",
+  "What are the value thresholds for a 6h ritual?": "Каковы пороги ценности для 6ч ритуала?",
+  "What is the Recipes page?": "Что такое страница Рецептов?",
+  "Why are some items excluded from 6h rewards?": "Почему некоторые предметы исключены из наград 6ч?",
+  "Why are some items hidden in 'Excluded Categories'?": "Почему некоторые предметы скрыты в 'Исключённых категориях'?",
+  "Why are weapons hidden by default?": "Почему оружие скрыто по умолчанию?",
+  "Why can't I use certain items in the ritual?": "Почему я не могу использовать некоторые предметы в ритуале?",
+  "Why do some weapons have such high Base Values?": "Почему у некоторого оружия такие высокие базовые ценности?"
 }
