--- a/config/i18n/sk.json5
+++ b/config/i18n/sk.json5
@@ -187,5 +187,52 @@
   "needed": "potrebne",
   "or": "alebo",
   "panel at the top of the page for known, community-tested combos.": "panel navrchu stranky so znamymi kombinaciami testovanymi komunitou.",
-  "to focus": "na fokus"
+  "to focus": "na fokus",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Pridat do oblubenych",
+  "All Categories": "Vsetky kategorie",
+  "Category:": "Kategoria:",
+  "Clear category filter": "Vymazat filter kategorie",
+  "Copy base price": "Kopirovat zakladnu cenu",
+  "Max": "Max",
+  "Maximum price": "Maximalna cena",
+  "Min": "Min",
+  "Minimum price": "Minimalna cena",
+  "Remove from favorites": "Odstranit z oblubenych",
+  "Reset price range": "Resetovat cenove rozpatie",
+  "to": "az",
+
+  // Help & FAQ page
+  "6h Exclusions": "Vylucenia 6h",
+  "Calculator Guide": "Sprievodca kalkulackou",
+  "Copy link to this section": "Kopirovat odkaz na tuto sekciu",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Vsetko, co potrebujete vediet o ritualoch Kultistickeho kruhu, hodnotach predmetov a mechanike kalkulacky.",
+  "General FAQ": "Vseobecne FAQ",
+  "How can I optimize my sacrifices?": "Ako mozem optimalizovat svoje obety?",
+  "How do I use the calculator?": "Ako pouzivat kalkulacku?",
+  "How do ritual durations work?": "Ako funguju doby trvania ritualov?",
+  "How is 'Base Value' calculated?": "Ako sa pocita 'Zakladna hodnota'?",
+  "Incompatible Items": "Nekompatibilne predmety",
+  "Item & Category Issues": "Problemy s predmetmi a kategoriami",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Predmety, ktore mozno obetovat, ale nikdy nebudu vratene ako odmeny 6h.",
+  "Link copied!": "Odkaz skopirovaný!",
+  "Note:": "Poznamka:",
+  "Ritual Mechanics": "Mechanika ritualov",
+  "Search 6h exclusions...": "Hladat vylucenia 6h...",
+  "Search incompatible items...": "Hladat nekompatibilne predmety...",
+  "These items are completely incompatible with ritual mechanics.": "Tieto predmety su uplne nekompatibilne s mechanikou ritualov.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Tieto predmety mozno stale ziskat ako odmeny z 14h ritualov, ale nikdy z 6h ritualu \"Uloha/Ukryt\".",
+  "Tips & Tricks": "Tipy a triky",
+  "Total Excluded from 6h:": "Celkom vylucene z 6h:",
+  "Total Restricted Items:": "Celkom obmedzených predmetov:",
+  "What are 'Hot Sacrifices'?": "Co su 'Popularne obety'?",
+  "What are 'Item Hints'?": "Co su 'Napovedy predmetov'?",
+  "What are the value thresholds for a 6h ritual?": "Ake su hodnotove prahy pre 6h ritual?",
+  "What is the Recipes page?": "Co je stranka Receptov?",
+  "Why are some items excluded from 6h rewards?": "Preco su niektore predmety vylucene z odmien 6h?",
+  "Why are some items hidden in 'Excluded Categories'?": "Preco su niektore predmety skryte vo 'Vylucene kategorie'?",
+  "Why are weapons hidden by default?": "Preco su zbrane predvolene skryte?",
+  "Why can't I use certain items in the ritual?": "Preco nemozu pouzit urcite predmety v rituale?",
+  "Why do some weapons have such high Base Values?": "Preco maju niektore zbrane take vysoke zakladne hodnoty?"
 }
