--- a/config/i18n/tr.json5
+++ b/config/i18n/tr.json5
@@ -187,5 +187,52 @@
   "needed": "gerekli",
   "or": "veya",
   "panel at the top of the page for known, community-tested combos.": "Sayfanin ustundeki panelde topluluk tarafindan test edilen kombinasyonlar bulunur.",
-  "to focus": "odaklamak icin"
+  "to focus": "odaklamak icin",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "Favorilere ekle",
+  "All Categories": "Tum kategoriler",
+  "Category:": "Kategori:",
+  "Clear category filter": "Kategori filtresini temizle",
+  "Copy base price": "Taban fiyati kopyala",
+  "Max": "Maks",
+  "Maximum price": "Maksimum fiyat",
+  "Min": "Min",
+  "Minimum price": "Minimum fiyat",
+  "Remove from favorites": "Favorilerden kaldir",
+  "Reset price range": "Fiyat araligini sifirla",
+  "to": "ile",
+
+  // Help & FAQ page
+  "6h Exclusions": "6s Istisnalar",
+  "Calculator Guide": "Hesap makinesi rehberi",
+  "Copy link to this section": "Bu bolumun linkini kopyala",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "Kultist Cemberi rituelleri, esya degerleri ve hesap makinesi mekanikleri hakkinda bilmeniz gereken her sey.",
+  "General FAQ": "Genel SSS",
+  "How can I optimize my sacrifices?": "Kurbanlarimi nasil optimize edebilirim?",
+  "How do I use the calculator?": "Hesap makinesini nasil kullanirim?",
+  "How do ritual durations work?": "Rituel sureleri nasil calisir?",
+  "How is 'Base Value' calculated?": "'Taban Deger' nasil hesaplanir?",
+  "Incompatible Items": "Uyumsuz esyalar",
+  "Item & Category Issues": "Esya ve kategori sorunlari",
+  "Items that can be sacrificed but never returned as 6h rewards.": "Kurban edilebilen ancak 6s odul olarak asla iade edilmeyen esyalar.",
+  "Link copied!": "Link kopyalandi!",
+  "Note:": "Not:",
+  "Ritual Mechanics": "Rituel mekanikleri",
+  "Search 6h exclusions...": "6s istisnalari ara...",
+  "Search incompatible items...": "Uyumsuz esyalari ara...",
+  "These items are completely incompatible with ritual mechanics.": "Bu esyalar rituel mekanikleriyle tamamen uyumsuzdur.",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "Bu esyalar 14s rituellerinden odul olarak alinabilir, ancak 6s \"Gorev/Siginak\" rituelinden asla alinamaz.",
+  "Tips & Tricks": "Ipuclari ve puflar",
+  "Total Excluded from 6h:": "6s'den toplam haric:",
+  "Total Restricted Items:": "Toplam kisitli esya:",
+  "What are 'Hot Sacrifices'?": "'Populer kurbanlar' nedir?",
+  "What are 'Item Hints'?": "'Esya ipuclari' nedir?",
+  "What are the value thresholds for a 6h ritual?": "6s rituel icin deger esikleri nelerdir?",
+  "What is the Recipes page?": "Tarifler sayfasi nedir?",
+  "Why are some items excluded from 6h rewards?": "Neden bazi esyalar 6s odullerinden haric tutuluyor?",
+  "Why are some items hidden in 'Excluded Categories'?": "Neden bazi esyalar 'Haric tutulan kategoriler'de gizli?",
+  "Why are weapons hidden by default?": "Neden silahlar varsayilan olarak gizli?",
+  "Why can't I use certain items in the ritual?": "Neden bazi esyalari rituelde kullanamiyorum?",
+  "Why do some weapons have such high Base Values?": "Neden bazi silahlarin taban degerleri bu kadar yuksek?"
 }
