--- a/config/i18n/zh.json5
+++ b/config/i18n/zh.json5
@@ -187,5 +187,52 @@
   "needed": "还需",
   "or": "或",
   "panel at the top of the page for known, community-tested combos.": "页面顶部面板，包含社区测试过的已知组合。",
-  "to focus": "以聚焦"
+  "to focus": "以聚焦",
+
+  // UI Components - price-range-filter, category-filter, virtualized-table
+  "Add to favorites": "添加到收藏夹",
+  "All Categories": "所有类别",
+  "Category:": "类别：",
+  "Clear category filter": "清除类别筛选",
+  "Copy base price": "复制基础价格",
+  "Max": "最大",
+  "Maximum price": "最高价格",
+  "Min": "最小",
+  "Minimum price": "最低价格",
+  "Remove from favorites": "从收藏夹移除",
+  "Reset price range": "重置价格范围",
+  "to": "至",
+
+  // Help & FAQ page
+  "6h Exclusions": "6小时排除项",
+  "Calculator Guide": "计算器指南",
+  "Copy link to this section": "复制此部分链接",
+  "Everything you need to know about the Cultist Circle rituals, item values, and calculator mechanics.": "关于邪教仪式、物品价值和计算器机制的所有信息。",
+  "General FAQ": "常见问题",
+  "How can I optimize my sacrifices?": "如何优化我的献祭？",
+  "How do I use the calculator?": "如何使用计算器？",
+  "How do ritual durations work?": "仪式时长如何运作？",
+  "How is 'Base Value' calculated?": "'基础价值'是如何计算的？",
+  "Incompatible Items": "不兼容物品",
+  "Item & Category Issues": "物品和类别问题",
+  "Items that can be sacrificed but never returned as 6h rewards.": "可以献祭但永远不会作为6小时奖励返回的物品。",
+  "Link copied!": "链接已复制！",
+  "Note:": "注意：",
+  "Ritual Mechanics": "仪式机制",
+  "Search 6h exclusions...": "搜索6小时排除项...",
+  "Search incompatible items...": "搜索不兼容物品...",
+  "These items are completely incompatible with ritual mechanics.": "这些物品与仪式机制完全不兼容。",
+  "These items can still be received as rewards from 14h rituals, but never from the 6h \"Quest/Hideout\" ritual.": "这些物品仍可从14小时仪式中获得，但永远不会从6小时\"任务/藏身处\"仪式中获得。",
+  "Tips & Tricks": "技巧和窍门",
+  "Total Excluded from 6h:": "6小时排除总数：",
+  "Total Restricted Items:": "受限物品总数：",
+  "What are 'Hot Sacrifices'?": "什么是'热门献祭'？",
+  "What are 'Item Hints'?": "什么是'物品提示'？",
+  "What are the value thresholds for a 6h ritual?": "6小时仪式的价值阈值是多少？",
+  "What is the Recipes page?": "什么是配方页面？",
+  "Why are some items excluded from 6h rewards?": "为什么某些物品被排除在6小时奖励之外？",
+  "Why are some items hidden in 'Excluded Categories'?": "为什么某些物品在'排除类别'中被隐藏？",
+  "Why are weapons hidden by default?": "为什么武器默认隐藏？",
+  "Why can't I use certain items in the ritual?": "为什么我不能在仪式中使用某些物品？",
+  "Why do some weapons have such high Base Values?": "为什么某些武器的基础价值这么高？"
 }
